chore(ui): fixed overflow for NavigationList component

--- a/src/components/navigation/navigation-list/NavigationList.scss
+++ b/src/components/navigation/navigation-list/NavigationList.scss
@@ -1,5 +1,5 @@
 .navigationList {
   padding: 0 16px;
   color: white;
-  overflow: auto;
+  overflow: hidden;
 }
